Implemented search feature

--- a/JobPortal-Training/JobPortal/appsettings.json
+++ b/JobPortal-Training/JobPortal/appsettings.json
@@ -6,5 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": { "TestDB": "Data Source=1GMYTP2;Initial Catalog=TestDB; Integrated Security=True; Encrypt=False" }
+    "ConnectionStrings": {
+        "jobDB": "Data Source=1GMYTP2;Initial Catalog=TestDB;Integrated Security=True;Encrypt=False;"
+    }
 }
