CRUD operations commit

--- a/Text-Editor-App/Text-Editor-App/appsettings.json
+++ b/Text-Editor-App/Text-Editor-App/appsettings.json
@@ -6,5 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {"TestDB": ""}
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=1GMYTP2;Initial Catalog=TextEditorApp;Integrated Security=True;Encrypt=False",
+    "App_Data_ContextConnection": "Data Source=1GMYTP2;Initial Catalog=TextEditorApp;Integrated Security=True;Encrypt=False;MultipleActiveResultSets=true"
+  }
 }
