--- a/JobPortal-Training/JobPortal/appsettings.json
+++ b/JobPortal-Training/JobPortal/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
     "ConnectionStrings": {
-        "jobDB": "Data Source=1GMYTP2;Initial Catalog=TestDB;Integrated Security=True;Encrypt=False;"
+        "jobDBK": "Data Source=1GMYTP2;Initial Catalog=TestDB;Integrated Security=True;Encrypt=False;",
+        "jobDBA": "Data Source=DESKTOP-IQRSRP8;Initial Catalog=jobportal;Integrated Security=True;Encrypt=False;"
     }
 }
