onboarding tour added

--- a/MobileRecharge/MobileRecharge/appsettings.json
+++ b/MobileRecharge/MobileRecharge/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=1GMYTP2;Initial Catalog=MobileRecharge;Integrated Security=True;Encrypt=False"
+    "DefaultConnection": "Data Source=1GMYTP2;Initial Catalog=MobileRecharge;Integrated Security=True;Encrypt=False",
+    "DB": "Data Source = DESKTOP-50S2HSR;Initial Catalog=MobileRecharge;Integrated Security=True;Encrypt=False;"
   },
   "Logging": {
     "LogLevel": {
